add hid codes support

--- a/.github/instructions/.instructions.md
+++ b/.github/instructions/.instructions.md
@@ -26,7 +26,7 @@ This is a Rust keyboard layout editor project using Yew and Trunk.
 - **Build**: `trunk build`
 
 ## Best Practices
-- Check for running processes before starting new development servers
+- Check for running processes before starting new development servers using `check_server.sh`
 - Use cargo check for fast compilation feedback
 - Maintain component modularity in the components directory
 - Follow Rust and Yew conventions for component structure
